added 100MRC java - tuning